--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -9,6 +9,7 @@ license = "Unlicense"
 publish = false
 repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
 build = "build.rs"
+default-run = "aria"
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
