--- a/pallets/actions/Cargo.toml
+++ b/pallets/actions/Cargo.toml
@@ -13,6 +13,7 @@ version = "0.0.0-dev"
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
+chrono = "0.4"
 codec = {package = "parity-scale-codec", version = "2.0.0", default-features = false, features = [
   "derive",
 ]}
@@ -23,12 +24,18 @@ scale-info = {version = "1.0", default-features = false, features = ["derive"]}
 
 [dependencies.sp-io]
 default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-tag = 'devhub/latest'
-version = '4.0.0-dev'
+git = "https://github.com/paritytech/substrate.git"
+tag = "devhub/latest"
+version = "4.0.0-dev"
+
+[dependencies.sp-std]
+default-features = false
+git = "https://github.com/paritytech/substrate.git"
+tag = "devhub/latest"
+version = "4.0.0-dev"
 
 [dependencies.serde]
-version = '1.0.129'
+version = "1.0.129"
 
 [dev-dependencies]
 sp-core = {default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest"}
@@ -43,6 +50,7 @@ std = [
   "frame-support/std",
   "frame-system/std",
   "frame-benchmarking/std",
+  "sp-std/std",
 ]
 
 runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
