--- a/pallets/actions/Cargo.toml
+++ b/pallets/actions/Cargo.toml
@@ -19,6 +19,7 @@ codec = {package = "parity-scale-codec", version = "2.0.0", default-features = f
 frame-benchmarking = {default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest", optional = true}
 frame-support = {default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest"}
 frame-system = {default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest"}
+log = {version = "0.4.14", default-features = false}
 scale-info = {version = "1.0", default-features = false, features = ["derive"]}
 
 [dependencies.sp-io]
@@ -44,6 +45,7 @@ sp-runtime = {default-features = false, version = "4.0.0-dev", git = "https://gi
 [features]
 default = ["std"]
 std = [
+  "log/std",
   "codec/std",
   "scale-info/std",
   "frame-support/std",
